# IBM-BOB-HACK

./: .env.example  .gitignore  DEMO_SCENARIOS.md  IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_INSTRUCTIONS.md  app.py  pyproject.toml  requirements.txt
agents/: crew_setup.py  shift_planner.py  skill_matcher.py  tools.py
api/: schemas.py  service.py
bob_sessions/: task_1.md  task_2.md  task_3.md
config/: settings.py
data/: loader.py  models.py  workers.csv
embeddings/: simple_embedder.py  skill_embedder.py  utils.py
faiss_db/: worker_skills.index  worker_skills_metadata.pkl
rag/: query_builder.py  retriever.py  vector_store.py
