[project]
name = "smartshift"
version = "0.1.0"
description = "AI-powered shift scheduling system using IBM watsonx.ai"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "crewai==0.11.2",
    "langchain-ibm>=0.1.0",
    "ibm-watsonx-ai>=0.2.0",
    "ibm-watson-machine-learning>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
    "torch",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "colorlog>=6.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "config", "data", "embeddings", "rag"]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }